k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: registry.gitlab.com/sawcloudops30/3_tier_leave_management_app/backend:d7cb30d4
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
        - containerPort: 9464
          name: metrics-otel
        resources:
          requests:
            cpu: "250m"    # 0.25 CPU
            memory: "256Mi"
          limits:
            cpu: "500m"    # 0.5 CPU (Hard limit)
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http
    - protocol: TCP
      port: 9464
      targetPort: 9464
      name: metrics-otel
  type: ClusterIP
